appId: com.pgcapp
name: 1 - Login fail
---
- launchApp
- tapOn:
      id: "email-input"
- inputText: "rodrigo@teste.com"
- tapOn:
      id: "password-input"
- inputText: 12345
- tapOn:
      id: "login-button"
- assertVisible: "Login Inválido"
- tapOn:
      text: "OK"
- assertVisible: "LOGIN"
