appId: com.pgcapp
name: 2 - Login success
---
- launchApp
- tapOn:
      id: "email-input"
- inputText: "rodrigo@teste.com"
- tapOn:
      id: "password-input"
- inputText: 123456
- tapOn:
      id: "login-button"
- assertVisible: "Notas"
