appId: com.pgcapp
name: 4 - Create Note - Validation
---
- launchApp
- tapOn:
          id: "new-note-button"
- tapOn:
          id: "save-note-button"
- assertVisible: "Preencha o título"
- tapOn:
          text: "OK"
- tapOn:
          id: "title-input"
- inputText: "Nota teste 1"
- tapOn:
          id: "save-note-button"
- assertVisible: "Preencha a descrição"
- tapOn:
          text: "OK"
- assertNotVisible: "Erro"
