appId: com.pgcapp
name: 6 - Delete Note
env:
  NOTE_TITLE: "Nota a ser apagada"
  NOTE_DESCRIPTION: "Descricao da nota a ser apagada"
---
- launchApp
- runFlow:
    file: ../../baseFlows/createNote.base.yaml
    env:
      NOTE_TITLE: ${NOTE_TITLE}
      NOTE_DESCRIPTION: ${NOTE_DESCRIPTION}
- tapOn: ${NOTE_TITLE}
- tapOn:
    id: "delete-note-button"
- tapOn: "Apagar"
- assertVisible:
    id: "new-note-button"
- assertNotVisible: ${NOTE_TITLE}
